header overlapping fixed

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,7 +5,6 @@
   @include flex-between;
   @include align-center;
   padding-top: 40px !important;
-  padding-bottom: 40px !important;
   position: relative;
   z-index: 1;
   .wallet {
